[package]
name          = "prometheus-mpd-exporter"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]
edition       = "2018"
description   = "Export MPD metrics to prometheus"
keywords      = ["prometheus", "mpd", "logging", "util"]
categories    = ["web-programming::http-server"]
readme        = "./README.md"
license       = "GPL-2.0"
repository    = "https://git.beyermatthi.as/prometheus-mpd-exporter/"

[dependencies]
anyhow                   = "1"
async-mpd                = "0.4"
env_logger               = "0.8"
prometheus_exporter_base = { version = "1.1", features = ["hyper_server"] }
structopt                = "0.3"
getset                   = "0.1"
log                      = "0.4"
actix-web                = "3"
thiserror                = "1"
parse-display            = "0.4"
num-traits               = "0.2" # whatever prometheus_exporter_base pulls in
itertools                = "0.9"
